fixed spacing for whole page

--- a/src/styles/pages/event/regional-state.module.scss
+++ b/src/styles/pages/event/regional-state.module.scss
@@ -9,13 +9,10 @@
   }
 }
 
-.friendship_walk_section,
-.champion_of_the_year {
-  margin-bottom: 30px;
-
-  @include phone {
-    margin-bottom: 22px;
-  }
+.events_sections {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 
 .imageContainerTop_mobile {
@@ -62,13 +59,14 @@
 .text_card {
   width: 50%;
   background-color: var(--color-white);
-  padding: 80px 60px;
+  padding: 56px 40px;
   border-radius: 15px;
   box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.02);
 
   @include phone {
     width: 100%;
-    padding: 40px 30px;
+    padding: 24px 16px;
+    border-radius: 10px;
   }
 }
 
@@ -148,7 +146,11 @@
 }
 
 .eventImage {
-  border-radius: 16px;
+  border-radius: 15px;
+
+  @include phone {
+    border-radius: 10px;
+  }
 }
 
 .eventImage_mobile {
@@ -162,7 +164,6 @@
   height: 50vh;
   justify-content: center;
   gap: 24px;
-  margin-bottom: 30px;
 
   @include phone {
     margin-bottom: 0;
@@ -178,11 +179,12 @@
   display: flex;
   flex-direction: row;
   gap: 16px;
-  margin-bottom: 71px;
+  margin-bottom: 100px;
 
   @include phone {
     flex-direction: column;
     gap: 0;
+    margin-bottom: 48px;
   }
 }
 
@@ -198,12 +200,13 @@
   flex-direction: column;
   gap: 16px;
   padding: 56px;
-  border-radius: 16px;
+  border-radius: 15px;
 
   @include phone {
     width: 100%;
     margin-bottom: 22px;
-    padding: 40px 30px;
+    padding: 24px 16px;
+    border-radius: 10px;
   }
 }
 
@@ -214,10 +217,11 @@
   align-items: center;
   text-align: center;
   background-color: var(--color-purple);
-  border-radius: 16px;
+  border-radius: 15px;
 
   @include phone {
     width: 100%;
+    border-radius: 10px;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
   }
@@ -247,7 +251,11 @@
 }
 
 .champion_of_the_year {
-  margin-top: 71px;
+  margin-top: 100px;
+
+  @include phone {
+    margin-top: 48px;
+  }
 }
 
 .champion_of_the_year > .text_card {
